--- a/1.2-console/simple-date/package.json
+++ b/1.2-console/simple-date/package.json
@@ -13,5 +13,9 @@
   },
   "dependencies": {
     "yargs": "^17.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1"
   }
 }
