--- a/2-library/package.json
+++ b/2-library/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
+    "multer": "^1.4.4",
     "node-unique-id-generator": "^0.1.0",
     "nodemon": "^2.0.6"
   }
