--- a/2-library/package.json
+++ b/2-library/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
     "multer": "^1.4.4",
